--- a/app/css/style.less
+++ b/app/css/style.less
@@ -1085,3 +1085,9 @@ tr.borderedRow {
 select[multiple] {
     width: auto;
 }
+
+.input-group-none {
+    font-style: italic;
+    color: @main-text-color;
+    opacity: .65;
+}
