NEON-1834 NEON-1835 Created the annotation service and the annotations directive.  Added annotations capability to the newsfeed.  Currently annotations only support sentiment.

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -27,6 +27,7 @@
 
 // directives
 @import 'directives/addVisualization.less';
+@import 'directives/annotations.less';
 @import 'directives/barchart.less';
 @import 'directives/circularHeatChart.less';
 @import 'directives/circularHeatForm.less';
