--- a/app/css/directives/newsfeed.less
+++ b/app/css/directives/newsfeed.less
@@ -33,7 +33,7 @@
         padding: 10px;
 
         &:first-child {
-            border: @border;
+            border: @main-border;
         }
 
         &.future {
