Fixing filter tray display for themes

--- a/app/css/directives/filterTray.less
+++ b/app/css/directives/filterTray.less
@@ -1,6 +1,15 @@
 .filter-tray-filters {
     height: 50px;
 
+    .filter-icon {
+        display: inline-block;
+        vertical-align: middle;
+        height: 34px;
+        width: 34px;
+        background-image: @createFilterIcon;
+        background-size: 100% 100%;
+    }
+
     .filter-tray-item {
         margin-right: 5px;
         font-size: 12px;
