--- a/app/partials/directives/filterTray.html
+++ b/app/partials/directives/filterTray.html
@@ -1,6 +1,6 @@
 <div class="dropdown filter-tray-filters" ng-show="filters.formatted.length > 0">
     <a class="dropdown-toggle navbar-text" data-toggle="dropdown" hre="#" role="button">
-        <img class="brand-image" src="img/FilterTray_64x64.png" height="34"></img>
+        <span class="filter-icon"></span>
         <span ng-bind="filters.formatted.length + ' filter' + ((filters.formatted.length === 1) ? '': 's')"></span>
         <span class="caret"></span>
     </a>
