Fixing news feed and gantt text colors

--- a/app/css/directives/gantt-chart.less
+++ b/app/css/directives/gantt-chart.less
@@ -3,6 +3,10 @@
     overflow: scroll;
     padding: 10px;
 
+    .gantt-column-header {
+        color: @main-text-color;
+    }
+
     .gantt-task-content {
         span {
             margin: 0px;
