--- a/app/css/directives/newsfeed.less
+++ b/app/css/directives/newsfeed.less
@@ -57,6 +57,7 @@
         .head {
             font-size: 15px;
             font-weight: bold;
+            color: @main-text-color;
         }
 
         .name {
