Fixing minor style issues in the timeline caused by the theme changes.

--- a/app/css/directives/timelineSelector.less
+++ b/app/css/directives/timelineSelector.less
@@ -84,6 +84,8 @@
     }
 
     .neon-datetimepicker {
+        top: 5px;
+
         .dropdown-toggle {
             cursor: pointer;
             font-family: "Open Sans", Helvetica, arial, sans-serif;
@@ -111,14 +113,18 @@
 
             label {
                 &.start-date {
-                    margin-top: 15px;
+                    margin-top: 5px;
                     width: 250px;
                 }
 
                 &.end-date {
-                    margin-top: 15px;
-                    width: 125px;
+                    margin-top: 5px;
+                    width: 100px;
                 }
+            }
+
+            button {
+                margin-left: 5px;
             }
 
             .datetimepicker {
