Fixing minor style issues in the barchart caused by the theme changes.

--- a/app/css/directives/barchart.less
+++ b/app/css/directives/barchart.less
@@ -163,13 +163,13 @@
     }
 
     .header-container {
-        .legend {
-            .filter-reset {
-                margin-left: 15px;
-            }
+        .filter-reset {
+            margin-left: 10px;
+        }
 
-            .limit-message {
-                margin-top: 10px;
+        .legend {
+            .legend-item {
+                margin-top: 5px;
             }
         }
     }
