--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -76,6 +76,7 @@
 
                 .glyphicon {
                     top: 2px;
+                    margin-right: 5px;
                 }
             }
 
@@ -114,16 +115,11 @@
                         }
 
                         .layer-options-row {
-                            height: 60px;
-                            margin-top: 10px;
+                            height: 75px;
 
                             &.row-large {
                                 height: auto;
                                 display: flex;
-                            }
-
-                            &:first-child {
-                                margin-top: 0px;
                             }
 
                             .layer-options-col {
@@ -182,7 +178,7 @@
         }
 
         &.legend-container {
-            bottom: 0px;
+            bottom: 5px;
             left: 10px;
             z-index: 1009;
 
@@ -190,7 +186,6 @@
                 background-color: @button-background-color;
                 border: @button-border;
                 border-radius: 4px;
-                padding: 5px 5px 2px;
                 color: @button-color;
 
                 .divider {
@@ -198,6 +193,10 @@
                     margin: 0 0 9px 0;
                     overflow: hidden;
                     background-color: @border-color;
+                }
+
+                .legend-toggle {
+                    padding: 5px;
                 }
 
                 .legend-details {
@@ -209,6 +208,7 @@
                         .legend-header {
                             cursor: pointer;
                             position: relative;
+                            padding: 5px;
 
                             .legend-title {
                                 margin-right: 25px;
@@ -247,7 +247,7 @@
                 border-radius: 5px;
                 font-size: 14px;
                 margin-top: 0px;
-                margin-right: 2px;
+                margin-right: 5px;
                 opacity: .8;
                 padding: 3px;
                 display: block;
