--- a/app/partials/directives/map.html
+++ b/app/partials/directives/map.html
@@ -1,7 +1,7 @@
 <div class="header-container menu-container">
     <options-menu parent-element="element" export-function="makeMapExportObject" resize="resizeOptionsMenu" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
         <div class="form-group info-container">
-            <label><span class="glyphicon glyphicon-info-sign margin-right"></span>SHIFT + DRAG on Map to Filter</label>
+            <label><span class="glyphicon glyphicon-info-sign"></span>SHIFT + DRAG on Map to Filter</label>
         </div>
 
         <div class="form-group button-container">
@@ -348,7 +348,7 @@
         <div class="legend-details" ng-show="legend.display">
             <div class="legend-layer" ng-repeat="legendLayer in legend.layers">
                 <div class="legend-header" ng-click="toggleLegendLayer($index)">
-                    <span class="legend-title" ng-bind="legendLayer.layerName"></span>
+                    <span class="legend-title header-text" ng-bind="legendLayer.layerName"></span>
                     <span class="glyphicon glyphicon-chevron-down pull-right" ng-show="!legendLayer.display"></span>
                     <span class="glyphicon glyphicon-chevron-up pull-right" ng-show="legendLayer.display"></span>
                 </div>
@@ -376,7 +376,7 @@
             </div>
         </div>
         <div class="divider" ng-show="legend.display"></div>
-        <div class="legend-toggle" ng-click="toggleLegend()">
+        <div class="legend-toggle header-text" ng-click="toggleLegend()">
             <span class="glyphicon glyphicon-map-marker"></span>
             <span>Legend</span>
         </div>
