NEON-1828 Added wiredep, injector, ngtemplate, and usemin tasks to grunt to automatically inject dependencies into app.less and index.html, concatenate/minify CSS, HTML, and JS dependencies, and create a production version of the application using the minified packages in build/.  Replaced the grunt-bower-task task with the grunt-exec task running the 'bower install' terminal command due to issues it had with the wiredep task.

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -20,32 +20,32 @@
     margin-right: 0px !important;
 }
 
-@import 'errorStyle.less';
-@import 'fonts.less';
-@import 'popupStyle.less';
-@import 'style.less';
-
-// directives
-@import 'directives/addVisualization.less';
-@import 'directives/barchart.less';
-@import 'directives/circularHeatChart.less';
-@import 'directives/circularHeatForm.less';
-@import 'directives/countBy.less';
-@import 'directives/directedGraph.less';
-@import 'directives/filterBuilder.less';
-@import 'directives/filterState.less';
-@import 'directives/filterTray.less';
-@import 'directives/gantt-chart.less';
-@import 'directives/importFile.less';
-@import 'directives/linechart.less';
-@import 'directives/map.less';
-@import 'directives/newsfeed.less';
-@import 'directives/queryResultsTable.less';
-@import 'directives/sample.less';
-@import 'directives/stackedBarChart.less';
-@import 'directives/sunburst.less';
-@import 'directives/tagCloud.less';
-@import 'directives/timelineSelector.less';
-@import 'directives/timelineSelectorChart.less';
-@import 'directives/translationOptions.less';
-@import 'directives/visualizationWidget.less';
+/* injector:less */
+@import "errorStyle.less";
+@import "fonts.less";
+@import "popupStyle.less";
+@import "style.less";
+@import "directives/addVisualization.less";
+@import "directives/barchart.less";
+@import "directives/circularHeatChart.less";
+@import "directives/circularHeatForm.less";
+@import "directives/countBy.less";
+@import "directives/directedGraph.less";
+@import "directives/filterBuilder.less";
+@import "directives/filterState.less";
+@import "directives/filterTray.less";
+@import "directives/gantt-chart.less";
+@import "directives/importFile.less";
+@import "directives/linechart.less";
+@import "directives/map.less";
+@import "directives/newsfeed.less";
+@import "directives/queryResultsTable.less";
+@import "directives/sample.less";
+@import "directives/stackedBarChart.less";
+@import "directives/sunburst.less";
+@import "directives/tagCloud.less";
+@import "directives/timelineSelector.less";
+@import "directives/timelineSelectorChart.less";
+@import "directives/translationOptions.less";
+@import "directives/visualizationWidget.less";
+/* endinjector */
