--- a/app/partials/directives/poweredByNeon.html
+++ b/app/partials/directives/poweredByNeon.html
@@ -1,5 +1,5 @@
 <a data-toggle="modal" data-target="#aboutNeonModal" class="navbar-text neon-popup-button pull-right" ng-click="loadNeonInfo()">
-    <span>Powered by</span><span class="icon-Neon_60x34 neon-sprite"</span>
+    <span>Powered by</span><span class="icon-Neon_60x34 neon-sprite"></span>
 </a>
 
 <div class="modal fade neon-popup" id="aboutNeonModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
