NEON-1849 Changed the navbar options menu back into a dropdown menu (instead of a popover) and fixed some minor style issues.

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -93,8 +93,9 @@
         transform: none;
         -webkit-transform: none;
 
-        .file-format-btn-group {
-            padding: 5px 40px;
+        .navbar-indented {
+            margin: 5px 40px;
+            width: auto;
         }
 
         .navbar-nav {
