--- a/app/partials/directives/exportWidgets.html
+++ b/app/partials/directives/exportWidgets.html
@@ -1,3 +1,3 @@
-<button class="btn btn-default" ng-click="exportAll()">
+<a href="#" ng-click="exportAll()">
     Export All Visualizations
-</button>
+</a>
