Added a background color and border to the options menu in the map so that it wouldn't blend in with the color and text of the base map layer.  Also changed the color of the legend in the map to match the options menu.

--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -45,6 +45,10 @@
             z-index: 1010;
 
             .chart-options {
+                background-color: @main-background;
+                border: @border-color 2px solid;
+                border-radius: 4px;
+
                 .popover {
                     max-width: none;
                     padding: 10px 0px 0px;
@@ -183,8 +187,8 @@
             z-index: 1009;
 
             .legend {
-                background-color: @button-background-color;
-                border: @button-border;
+                background-color: @main-background;
+                border: @border-color 2px solid;
                 border-radius: 4px;
                 color: @button-color;
 
