NEON-1632 Users can now change the base layer for the map through its options menu.

--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -269,7 +269,8 @@
     }
 
     .olMap {
-        background-color: #242424;
+        // The JS will set the correct background color depending on the base layer used.
+        background-color: #fff;
         border-radius: 0 0 4px 4px;
         width: auto !important;
         height: 100% !important;
