NEON-1852 Fixed the color issue with the external application links in the dark dashboard themes for the Aggregation and Data Table visualizations.

--- a/app/css/directives/newsfeed.less
+++ b/app/css/directives/newsfeed.less
@@ -73,8 +73,11 @@
         }
 
         .glyphicon {
-            color: #333;
             font-size: 12px;
+
+            &:focus, &:hover {
+                color: @accent-bright;
+            }
         }
     }
 
