--- a/app/css/variables-light-green.less
+++ b/app/css/variables-light-green.less
@@ -27,7 +27,7 @@
 
 @accent-dulled-text-color: #000000;
 @main-text-color: #777777;
-@mid-text-color: darken(@main-text-color, 50%);
+@mid-text-color: #5E5E5E;
 @light-text-color: #FFFFFF;
 
 @error-text-color: #AA1E13;
