--- a/app/partials/directives/newsfeed.html
+++ b/app/partials/directives/newsfeed.html
@@ -104,7 +104,7 @@
                 <span class="head" ng-if="item.headTranslated != undefined" ng-show="options.showTranslation" ng-bind="item.headTranslated" title="{{item.head}}"></span>
                 <span class="name" ng-if="item.name != undefined" ng-show="!options.showTranslation" ng-bind="item.name"></span>
                 <span class="name" ng-if="item.nameTranslated != undefined" ng-show="options.showTranslation" ng-bind="item.nameTranslated" title="{{item.name}}"></span>
-                <links-popup-button key="" source="" tooltip="{{item.head}} or {{item.name}}" json="{{item.linksPopupButtonJson}}" is-disabled="{{item.linksPopupButtonIsDisabled}}" show-if-disabled="'true'"></links-popup-button>
+                <links-popup-button key="" source="" tooltip="{{item.head}} or {{item.name}}" json="{{item.linksPopupButtonJson}}" is-disabled="{{item.linksPopupButtonIsDisabled}}"></links-popup-button>
             </span>
         </div>
         <div>
