Adding a left margin to the filter reset notifications.

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -294,8 +294,9 @@ select[multiple] {
     }
 
     .filter-reset {
-        padding: 5px;
         border: @main-border;
+        margin-left: 5px;
+        padding: 5px;
 
         .filter-label {
             color: @main-text-color;
