Changing the background and text colors in the dark green dashboard theme to match the colors in the dark purple dashboard theme because there's no reason why they should be different.

--- a/app/css/variables-dark-green.less
+++ b/app/css/variables-dark-green.less
@@ -16,7 +16,7 @@
 @main-background: #0B0D0D;
 @visualization-box-background: #1B313D;
 @mid-background: #314551;
-@light-background: #1B313D;
+@light-background: #C9CFD1;
 
 @accent-bright: #39B54A;
 @accent-dark: #2F9F3E;
@@ -25,9 +25,9 @@
 @accent-lightest: #E0D5E0;
 @callout: #DAA520;
 
-@accent-dulled-text-color: #000000;
+@accent-dulled-text-color: #0B0D0D;
 @main-text-color: #85949C;
-@mid-text-color: darken(@main-text-color, 10%);
+@mid-text-color: #C9CFD1;
 @light-text-color: #FFFFFF;
 
 @error-text-color: #AA1E13;
