--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -45,8 +45,7 @@
             z-index: 1010;
 
             .chart-options {
-                background-color: @main-background;
-                border: @border-color 2px solid;
+                border: @main-border;
                 border-radius: 4px;
 
                 .popover {
@@ -61,12 +60,16 @@
                     right: 25px;
                 }
 
-                /* Give the menu container a background to make it more readable.  Make it the same height (30 px) and color of the filter reset notifications. */
+                /* Give the menu container a background to make it more readable.  Make it the same height (30 px) and color of the filter reset notification and the legend. */
                 a {
-                    background-color: transparent;
+                    background-color: @visualization-box-background;
                     border: none;
                     border-radius: 4px;
                     padding: 5px 5px 2px;
+
+                    &.collapsed {
+                        background-color: @visualization-box-background-transparent;
+                    }
                 }
             }
 
@@ -187,9 +190,13 @@
             z-index: 1009;
 
             .legend {
-                background-color: @main-background;
-                border: @border-color 2px solid;
+                background-color: @visualization-box-background-transparent;
+                border: @main-border;
                 border-radius: 4px;
+
+                &.open {
+                    background-color: @visualization-box-background;
+                }
 
                 .divider {
                     height: 1px;
@@ -261,6 +268,10 @@
         &.filter-container {
             top: 50px;
             right: 45px;
+
+            .filter-reset {
+                background-color: @visualization-box-background-transparent;
+            }
         }
     }
 
