--- a/app/css/variables-dark-purple.less
+++ b/app/css/variables-dark-purple.less
@@ -15,6 +15,7 @@
 
 @main-background: #0B0D0D;
 @visualization-box-background: #1B313D;
+@visualization-box-background-transparent: rgba(27, 49, 61, 0.75);
 @mid-background: #314551;
 @light-background: #C9CFD1;
 
