--- a/app/css/variables-light-green.less
+++ b/app/css/variables-light-green.less
@@ -15,6 +15,7 @@
 
 @main-background: #F1F1F1;
 @visualization-box-background: #FFFFFF;
+@visualization-box-background-transparent: rgba(255, 255, 255, 0.75);
 @mid-background: #F5F5F5;
 @light-background: #FFFFFF;
 
